# ios-obfuscator

./: .gitignore  BUILD.md  BUILD_STEP_BY_STEP.md  CLAUDE.md  CMakeLists.txt  DEVELOPMENT.md  PERFORMANCE_ANALYSIS.md  README.md  build.sh
config/: config.json
src/: main.cpp
src/core/: AhoCorasick.cpp  AhoCorasick.h  CompileOptions.cpp  CompileOptions.h  ConfigManager.cpp  ConfigManager.h  DeadCodeGenerator.cpp  DeadCodeGenerator.h  Logger.cpp  Logger.h  NameGenerator.cpp  NameGenerator.h  ReplacementManager.cpp  ReplacementManager.h  StrategyManager.cpp  StrategyManager.h  SymbolTable.cpp  SymbolTable.h  SystemProperties.h
src/strategies/: ClassNameFolderStrategy.cpp  ClassNameFolderStrategy.h  ClassNameStrategy.cpp  ClassNameStrategy.h  CommentRemovalStrategy.cpp  CommentRemovalStrategy.h  DeadCodeInjectionStrategy.cpp  DeadCodeInjectionStrategy.h  FileNameStrategy.cpp  FileNameStrategy.h  MethodNameStrategy.cpp  MethodNameStrategy.h  ObfuscationStrategy.cpp  ObfuscationStrategy.h  PropertyNameStrategy.cpp  PropertyNameStrategy.h  ProtocolNameStrategy.cpp  ProtocolNameStrategy.h  SDKNameStrategy.cpp  SDKNameStrategy.h  VariableNameStrategy.cpp  VariableNameStrategy.h
src/templates/: DeadCodeTemplates.cpp  DeadCodeTemplates.h
tests/: README.md  run_all_tests.sh  run_quick_test.sh  test_class_name.sh  test_config.json  test_dead_code_injection.sh  test_method_name.sh  test_method_name_strategy.cpp  test_property_name.sh  test_sdk_name.sh
tests/HWSDK/HWSDK/: HWSDK.m
tests/HWSDK/HWSDK.xcodeproj/: project.pbxproj
tests/HWSDK/HWSDK/Classes/: HWSDKDataModel+JSON.h  HWSDKDataModel+JSON.m  HWSDKDataModel.h  HWSDKDataModel.m  HWSDKDeadCodeTest.h  HWSDKDeadCodeTest.m  HWSDKManager+Database.h  HWSDKManager+Database.m  HWSDKManager.h  HWSDKManager.m  HWSDKMethodTest.h  HWSDKMethodTest.m  HWSDKNetworkManager.h  HWSDKNetworkManager.m  HWSDKPrivate.h  HWSDKPropertyTest.h  HWSDKPropertyTest.m  HWSDKVariableTest.h  HWSDKVariableTest.m  LKFirebaseMannager.h  LKFirebaseMannager.m  MBProgressHUD+NJ.m  RXDLD_SdkTool.h  RXDLD_SdkTool.m  UIView+HWSDKExt.h  UIView+HWSDKExt.m
tests/HWSDK/HWSDK/Classes/AFNetworking/AFNetworking/: AFNetworkReachabilityManager.m  AFURLRequestSerialization.m
tests/HWSDK/HWSDK/Classes/FiNleSDWebImage/: MKAnnotationView+WebCache.m  SDWebImagePrefetcher.m  UIButton+WebCache.m  UIImageView+HighlightedWebCache.m  UIImageView+WebCache.m
tests/HWSDK/HWSDK/Classes/IQKeyboardManager/: IQKeyboardManager.m
tests/HWSDK/HWSDK/Classes/IQKeyboardManager/Categories/: IQUIScrollView+Additions.m  UIButton+Extensions.h  UIButton+Extensions.m
tests/HWSDK/HWSDK/Classes/IQKeyboardManager/IQToolbar/: IQUIView+IQKeyboardToolbar.m
tests/HWSDK/HWSDK/Classes/Keychain/: Hpub_YYKeychain.h  Hpub_YYKeychain.m
tests/HWSDK/HWSDK/Classes/Masonry/: MASCompositeConstraint.h
tests/HWSDK/HWSDK/Classes/deletedOil/AppsFlyerLib.framework/: AppsFlyerLib
tests/HWSDK/HWSDK/Classes/deletedOil/AppsFlyerLib.framework/Modules/AppsFlyerLib.swiftmodule/: arm64-apple-ios.swiftmodule  x86_64-apple-ios-simulator.swiftmodule
tests/HWSDK/HWSDK/Classes/deletedOil/AppsFlyerLib.framework/Modules/AppsFlyerLib.swiftmodule/Project/: arm64-apple-ios.swiftsourceinfo  x86_64-apple-ios-simulator.swiftsourceinfo
tests/HWSDK/HWSDK/Other/: HWSDK-Prefix.pch
tests/HWSDK/HWSDK/Public Headers/: HWSDK.h
wordlist/: README.md  adjectives.txt  nouns.txt  parameters.txt  verbs.txt
